# STAYFOCUSED

./: Cargo.toml  README.md  dist-workspace.toml
.github/: FUNDING.yml
.github/workflows/: auto-cargo-release.yml  auto-tag.yml  cargo-publish.yml  cargo-release.yml  main.yml  prepare-release.yml  release.yml  tests.yml
src/: main.rs  project.rs  project_list.rs  random.rs  task.rs  task_list.rs  time_commitment.rs
