[package]
name = "stayfocused"
version = "0.3.3"
description = "Software To Avoid [Y] Fixating On Completely Unproductive Shit Every Day"

repository = "https://github.com/duckinator/STAYFOCUSED"

license-file = "LICENSE.txt"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.210"
eframe = { version = "0.28.1", default-features = true, features = ["persistence"] }
egui_extras = "0.28.1"
rand = "0.8.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

# Config for 'cargo release'
[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
