[package]
name = "stayfocused"
version = "0.3.16"
description = "Software To Avoid [Y] Fixating On Completely Unproductive Shit Every Day"

repository = "https://github.com/duckinator/STAYFOCUSED"

license-file = "LICENSE.txt"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.210"
eframe = { version = "0.29.1", default-features = true, features = ["persistence"] }
egui_extras = "0.29.1"
rand = "0.8.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
